Bone's tail is still selected after invert selection #115657

Closed
opened 2023-12-01 12:09:16 +01:00 by Serge Lyatin · 1 comment

System Information
Operating system: win10
Graphics card: 1050ti

Blender Version
Broken: 3.6.6

Short description of error
If a bone has unconnected child, its tail is excluded from "invert selection" operation

Exact steps for others to reproduce the error
From scratch:

  1. Create an Armature with two unconnected bones, parent second to first with Keep Offset option
  2. In edit mode select whole parent bone and make selection inverse (CTRL + i) > tail is still selected

Or in attached file:
Make selection inverse by pressing CTRL + i

**System Information** Operating system: win10 Graphics card: 1050ti **Blender Version** Broken: 3.6.6 **Short description of error** If a bone has unconnected child, its tail is excluded from "invert selection" operation **Exact steps for others to reproduce the error** From scratch: 1. Create an Armature with two unconnected bones, parent second to first with _Keep Offset_ option 2. In edit mode select whole parent bone and make selection inverse (`CTRL + i`) > tail is still selected Or in attached file: Make selection inverse by pressing `CTRL + i`
Serge Lyatin added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-01 12:09:16 +01:00
Member

Can confirm

Can confirm
Philipp Oeser self-assigned this 2023-12-01 12:51:38 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-05 14:08:22 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115657
No description provided.