Fix #115657 : Bone's tail is still selected after invert selection

The whole logic of selecting a parent bone's tip when selecting a bone
should only happen when they are actually **connected**
(BONE_CONNECTED), same as when picking a bone in the UI
(`ED_armature_edit_select_pick_bone`).

Pull Request: https://projects.blender.org/blender/blender/pulls/115663